--- a/src/index.scss
+++ b/src/index.scss
@@ -4,11 +4,30 @@ body {
 }
 
 canvas {
+   
     z-index: 1;
     position: absolute;
 }
 
 .menu {
+    padding: 1rem 2rem;
+    margin-top: 5rem;
+    margin-left: 2rem;
+    height: 30rem;
+    background-color: #c9c9c96c;
     z-index: 2;
     position: absolute;
+    color: greenyellow;
+    font-family: "roboto mono", monospace;
+    box-shadow: 0px 0px 4px rgba($color: #000000, $alpha: 0.5);
+    text-shadow: 0px 1px 4px rgba($color: #000000, $alpha: 1.0);
+    border-radius: 0.5rem;
+    overflow: hidden;
+}
+.item {
+    background-color:#fff;
+    margin-top: 1rem;
+    height: 5rem;
+    width: 5rem;
+    border-radius: 0.5rem;
 }
