--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,12 @@
+* {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+*::-webkit-scrollbar {
+    display: none;
+    width: 0;
+}
+
 body {
     position: absolute;
     z-index: 0;
@@ -22,8 +31,9 @@ canvas {
     box-shadow: 0px 0px 4px rgba($color: #000000, $alpha: 0.5);
     text-shadow: 0px 1px 4px rgba($color: #000000, $alpha: 1.0);
     border-radius: 0.5rem;
-    overflow: hidden;
+    overflow-y: scroll;
 }
+
 .item {
     background-color:#fff;
     margin-top: 1rem;
